tests/ui/editions/dyn-trait-sugg-2021.stderr
error[E0782]: trait objects must include the `dyn` keyword
  --> $DIR/dyn-trait-sugg-2021.rs:10:5
   |
LL |     Foo::hi(123);
   |     ^^^
   |
help: add `dyn` keyword before this trait
   |
LL |     <dyn Foo>::hi(123);
   |     ++++    +

error: aborting due to previous error

For more information about this error, try `rustc --explain E0782`.
